--- a/Семинар 08.04.2024.md
+++ b/Семинар 08.04.2024.md
@@ -93,4 +93,4 @@ OrderService
 
 1. создать интерфейс-ы для репозитория
 2. создать интерфейс-ы для сервисов
-3. добавить проверки
+3. добавить проверки - сервисы делают проверки перед выполнением действия (count >= 0 и т.д.)
